--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
 			<h3 class="text-md">IT Product Portal Developer at <a class="underline decoration-2 decoration-sky-500 hover:underline-offset-2" href="https://www.detik.com">DetikNetwork</a></h3>
 			<h4 class="text-sm mt-4">Social</h4>
 			<ul class="flex flex-wrap justify-evenly space-x-4">
-				<li><a class="hover:text-sky-500" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
-				<li><a class="hover:text-sky-500" href="https://www.facebook.com/vikingcurvasud" target="_blank">Facebook</a></li>
-				<li><a class="hover:text-sky-500" href="https://github.com/kholiscahyoko" target="_blank">Github</a></li>
-				<li><a class="hover:text-sky-500" href="https://www.instagram.com/kholis.cahyoko" target="_blank">Instagram</a></li>
-				<li><a class="hover:text-sky-500" href="https://www.linkedin.com/in/kholis-cahyoko" target="_blank">Linkedin</a></li>
-				<li><a class="hover:text-sky-500" href="https://www.twitter.com/chaobianconerri" target="_blank">Twitter</a></li>
-				<li><a class="hover:text-sky-500" href="https://www.youtube.com/@warunggeek" target="_blank">Youtube</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.facebook.com/vikingcurvasud" target="_blank">Facebook</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://github.com/kholiscahyoko" target="_blank">Github</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.instagram.com/kholis.cahyoko" target="_blank">Instagram</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.linkedin.com/in/kholis-cahyoko" target="_blank">Linkedin</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.twitter.com/chaobianconerri" target="_blank">Twitter</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.youtube.com/@warunggeek" target="_blank">Youtube</a></li>
 			</ul>
 		</div>
 	</div>
