add meta og and others

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Kholis Cahyoko</title>
+  <meta property="og:title" content="Kholis Cahyoko">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://me.kholiscahyoko.my.id">
+  <meta property="og:image" content="https://me.kholiscahyoko.my.id/public/images/kholis-cahyoko.webp">
   <meta name="keywords" content="Kholis Cahyoko, Web Programmer, Web Developer">
   <meta name="description" content="I'm Kholis Cahyoko, this is my profile page. Thank you.">
   <link rel="apple-touch-icon" sizes="180x180" href="./public/images/favicon_io/apple-touch-icon.png">
@@ -20,13 +24,18 @@
 			<h3 class="text-md">IT Product Portal Developer at <a class="underline decoration-2 decoration-sky-500 hover:underline-offset-2" href="https://www.detik.com">DetikNetwork</a></h3>
 			<h4 class="text-sm mt-4">Social</h4>
 			<ul class="flex flex-wrap justify-evenly space-x-4">
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.facebook.com/vikingcurvasud" target="_blank">Facebook</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://github.com/kholiscahyoko" target="_blank">Github</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.instagram.com/kholis.cahyoko" target="_blank">Instagram</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.linkedin.com/in/kholis-cahyoko" target="_blank">Linkedin</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.twitter.com/chaobianconerri" target="_blank">Twitter</a></li>
 				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.youtube.com/@warunggeek" target="_blank">Youtube</a></li>
+			</ul>
+			<h4 class="text-sm mt-4">Others</h4>
+			<ul class="flex flex-wrap justify-evenly space-x-4">
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.duolingo.com/profile/kholis.c?via=share_profile_link" target="_blank">Duolingo</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://friend.chess.com/2tNdj" target="_blank">Chess.com</a></li>
 			</ul>
 		</div>
 	</div>
