--- a/index.html
+++ b/index.html
@@ -16,26 +16,27 @@
   <link rel="manifest" href="./public/images/favicon_io/site.webmanifest">
   <link href="./public/css/tailwind.css" rel="stylesheet">
 </head>
-<body class="bg-white dark:bg-slate-800 text-slate-900 dark:text-white font-mono">
+<body class="min-h-screen bg-white dark:bg-gradient-to-b dark:from-slate-900 dark:to-purple-900 text-slate-900 dark:text-white font-mono">
 	<div class="flex items-center justify-center">
 		<div class="flex items-center justify-center p-10 flex-col text-center">
-			<h1 class="tracking-widest font-bold text-2xl mb-2">Kholis Cahyoko</h1>
+			<h1 class="tracking-widest font-bold text-2xl mb-2">Kh<span class="text-red-600">o</span>lis Cahy<span class="text-red-600">o</span>k<span class="text-red-600">o</span></h1>
 			<h2 class="text-sm italic">Web Programmer in Serang, Indonesia</h2>
-			<h3 class="text-md">IT Product Portal Developer at <a class="underline decoration-2 decoration-sky-500 hover:underline-offset-2" href="https://www.detik.com">DetikNetwork</a></h3>
+			<h3 class="text-md">IT Product Portal Developer at <a class="underline decoration-2 decoration-purple-600 hover:underline-offset-2" href="https://www.detik.com">DetikNetwork</a></h3>
 			<h4 class="text-sm mt-4">Social</h4>
 			<ul class="flex flex-wrap justify-evenly space-x-4">
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.facebook.com/vikingcurvasud" target="_blank">Facebook</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://github.com/kholiscahyoko" target="_blank">Github</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.instagram.com/kholis.cahyoko" target="_blank">Instagram</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.linkedin.com/in/kholis-cahyoko" target="_blank">Linkedin</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.twitter.com/chaobianconerri" target="_blank">Twitter</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.youtube.com/@warunggeek" target="_blank">Youtube</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.facebook.com/vikingcurvasud" target="_blank">Facebook</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://github.com/kholiscahyoko" target="_blank">Github</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.instagram.com/kholis.cahyoko" target="_blank">Instagram</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.linkedin.com/in/kholis-cahyoko" target="_blank">Linkedin</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.twitter.com/chaobianconerri" target="_blank">Twitter</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.youtube.com/@warunggeek" target="_blank">Youtube</a></li>
 			</ul>
-			<h4 class="text-sm mt-4">Others</h4>
+			<hr class="border-b-2 border-purple-600 w-full mt-2">
+			<h4 class="text-sm mt-2">Others</h4>
 			<ul class="flex flex-wrap justify-evenly space-x-4">
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://www.duolingo.com/profile/kholis.c?via=share_profile_link" target="_blank">Duolingo</a></li>
-				<li><a class="px-1 rounded hover:bg-slate-800 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://friend.chess.com/2tNdj" target="_blank">Chess.com</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900 dark:text-red-600" href="https://kholiscahyoko.my.id" target="_blank">Blog</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900 dark:text-red-600" href="https://www.duolingo.com/profile/kholis.c?via=share_profile_link" target="_blank">Duolingo</a></li>
+				<li><a class="px-1 rounded hover:bg-slate-900 hover:text-white dark:hover:bg-white dark:hover:text-slate-900" href="https://friend.chess.com/2tNdj" target="_blank">Chess.com</a></li>
 			</ul>
 		</div>
 	</div>
